
Version (CVS) 
-------------

JDO:   Fixed bug 1705 - DuplicateIdentityExceptions not reported correctly
       when using PostgreSQL.
       (Bruce - 20040804)

XML:   Fixed bug 1560 by adding some additional checks for null
       in the XMLClassDescriptorImpl.
       (kvisco - 20040729)

XML:   Updated the Unmarshaller to make sure it gets the ClassLoader
       from the passed in class if no user specific loader has been
       specified.
       (kvisco - 20040729)

XML:   Fixed bug with FieldHandlerFactory support in introspector by
       making sure the the type specified by the FieldHandler 
       replaces that of the introspection. This allows primitives
       to be correctly handled by the custom FieldHandler.
       (kvisco - 20040720)

XML:   Fixed java.util.Set support in the introspector.
       (kvisco - 20040713)

XML:   Fixed bug 1683 so that the Source Generator better supports XDoclet
       tags in an XSD. 
       (Bruce - 20040711)

JDO:   Fixed bug 1508 using contribution from Stein M. Hugubakken [dulci@start.no]
       Refactored code, applying strategy pattern.
       Details: http://bugzilla.exolab.org/show_bug.cgi?id=1508
       (Werner - 20040629)
       
JDO:   Fixed bug 1651 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added XML prefixes to various files in src/examples and src/tests/jdo.
       Details: http://bugzilla.exolab.org/show_bug.cgi?id=1651
       (Werner - 20040607)
       
XML:   Fixed a cyclic include bug with the IncludeUnmarshaller, added
       some code to make sure the main schema couldn't include itself.
       (kvisco - 20040624)

JDO:   Fixed bug 1445 using contribution from Stein M. Hugubakken [dulci@start.no]
       Fixed various small problems with SQL DDLs in src/tests/jdo.
       Details: http://bugzilla.exolab.org/show_bug.cgi?id=1445
       (Werner - 20040607)

JDO:   Fixed bug 1648 using contribution from Nick Stuart [nick@newtsplace.com]